--- a/texte/index.html
+++ b/texte/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apresentação</title>
+    <title>Texte</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <div class="capa">
+    <div class="start">
+        <p class="começar">start</p>
+    </div>
+    <div id="foto">
         <h1>Desenvolvedor web</h1>
-        <img src="#" alt="imagem de yury casemiro">
+        <img class="eu" src="imagem/yury-340x584.png" alt="imagem de yury casemiro">
     </div>
     <div class="apresentacao">
         <h2>Apresentação</h2>
@@ -19,15 +20,15 @@
         <p>Possuo proficência nas linguagens <span>HTML5, CSS3</span> e <span>JavaScript</span> as quais tenho aplicado em diversos projetos.</p>
         <p>Meu objetivo principal é alcançar uma oportunidade de emprego ná área de desenvolvimento web, onde poderei aplicar na prática todo o conhecimento que tenho adquirido.</p>
     </div>
-    <div>
-        <a href="#">Ver curriculo</a>
-        <a href="#">Baixar curriculo</a>
-        <a href="#">linkdin</a>
-        <a href="#">instagram</a>
-        <a href="#">email</a>
+    <div class="icon">
+        <img src="icons/documentos-32x32.png" alt="icon curriculo"><a href="#"></a></img>
+        <img src="icons/pdf-32x32.png" alt="icon pdf"><a href="#"></a></img>
+        <img src="icons/linkedin-32x32.png" alt="icon linkedin"><a href="#"></a></img>
+        <img src="icons/instagram-32x32.png" alt="icon instagram"><a href="#"></a></img>
+        <img src="icons/gmail-32x32.png" alt="icon gmail"><a href="#"></a></img>
     </div>
     <div>
-        <h1>Projetos</h1>
+        <h2>Projetos</h1>
         <li>
             <ol><img src="imagem/Em (2).png" alt="projetos"></ol>
             <ol><img src="imagem/Em (2).png" alt="projetos"></ol>
@@ -36,5 +37,4 @@
         </li>
     </div>
 </body>
-
 </html>
